<resources>
    <!-- App Name -->
    <string name="app_name">TodoList</string>
    <!-- MainActivity -->
    <string name="add_todo">할 일 추가하기</string>
    <!-- AddTodoActivity -->
    <string name="title">제목</string>
    <string name="hint_title">해야 할 일 을 입력해주세요.</string>
    <string name="importance">중요도</string>
    <string name="importance_low">낮음</string>
    <string name="importance_middle">중간</string>
    <string name="importance_high">높음</string>
    <string name="completion">완료</string>
</resources>