<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTodoActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:hint="@string/hint_title"
        android:textSize="14sp"
        android:imeOptions="actionDone"/>

    <TextView
        android:id="@+id/tv_importance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_title"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/importance"/>
    
    <RadioGroup
        android:id="@+id/rg_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_importance"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/btn_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_low"/>

        <RadioButton
            android:id="@+id/btn_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_middle"/>

        <RadioButton
            android:id="@+id/btn_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/importance_high"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_completion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/completion"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>